druid-derive/tests/ui/with-enum.stderr
error: Lens implementations cannot be derived from enums
 --> $DIR/with-enum.rs:4:1
  |
4 | enum Foobar {
  | ^^^^
