druid-derive/tests/ui/with-enum.rs
use druid::*;

#[derive(Lens)]
enum Foobar {
    Foo(i32),
    Bar,
}

fn main() {}
